# cepheus_launcher

./: .gitignore  LICENSE  README.md  docker-compose.yml  ls_pi_est.txt  prescript.sh  start.sh  start_local_simulation.sh
django_server/: Dockerfile  db.sqlite3  entrypoint.sh  manage.py  requirements.txt
django_server/dashboard/: urls.py  views.py
django_server/ros_server/: asgi.py  settings.py  wsgi.py
django_server/templates/: base.html
src/cepheus_control/: CMakeLists.txt  package.xml
src/cepheus_control/config/: cepheus_control.yaml
src/cepheus_control/launch/: cepheus_control.launch
src/cepheus_control/src/: cepheus_controller.cpp  define.h
src/cepheus_description/: CMakeLists.txt  package.xml
src/cepheus_description/urdf/: cepheus.gazebo  cepheus.xacro  materials.xacro
src/cepheus_description/urdf/meshes/: left_arm.STL  left_forearm.STL  left_grip.STL  reaction_wheel.STL
src/cepheus_gazebo/: CMakeLists.txt  package.xml
src/cepheus_gazebo/launch/: cepheus_world.launch
src/cepheus_gazebo/worlds/: cepheus.world
src/cepheus_interface/server/: .env  Dockerfile  README.md  api.js  package-lock.json  package.json  ros.js
src/cepheus_interface/server/scripts/: prescript.sh  start_robot.sh  stop_robot.sh
src/cepheus_interface/web_ui/: .env  Dockerfile  README.md  package-lock.json  package.json
src/cepheus_interface/web_ui/pages/: index.js
src/cepheus_interface/web_ui/public/: index.html
src/cepheus_interface/web_ui/src/: App.css  App.js  index.js
src/cepheus_interface/web_ui/src/components/: Control.js
