<?xml version="1.0"?>
<package format="2">
  <name>cepheus_description</name>
  <version>0.0.0</version>
  <description>The cepheus_description package</description>

  <maintainer email="peleioannis@gmail.com">Ioannis Pelekoudas</maintainer>

  <license>MIT</license>

  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!-- Use doc_depend for packages you need only for building documentation: -->

  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>urdf</build_depend>

  <!-- Use exec_depend for packages you need at runtime: -->
  <exec_depend>ros_control</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>urdf</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
